# OpenGL

./: CMakeLists.txt  LICENSE  README.md
bigwen/: glad.c  main.cpp  main2.cpp
bigwen.xcodeproj/: project.pbxproj
bigwen.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
bigwen.xcodeproj/xcuserdata/huanwenguo.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: 1-triangle.cpp  2-square.cpp  3-1-shader.cpp  3-2-shader.cpp  3-3-shader.cpp  4-1-texture.cpp  5-1-transform.cpp  define.h  main.cpp  opengl.h  shader_s.h
